--- a/background-generator.html
+++ b/background-generator.html
@@ -13,6 +13,6 @@
 	<h2>Current CSS Generator</h2>
 	<h3></h3>
 	<h4><button>Random Colors</button></h4>
-	<!--<script type="text/javascript" src="script.js"></script>-->
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
