--- a/background-generator.html
+++ b/background-generator.html
@@ -8,8 +8,10 @@
 </head>
 <body id="gradient">
 	<h1>Background Generator</h1>
+	<form>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
+	</form>
 	<h2>Current CSS Generator</h2>
 	<h3></h3>
 	<h4><button>Random Colors</button></h4>
